Fix button alignment

--- a/examples/style.css
+++ b/examples/style.css
@@ -232,19 +232,19 @@ input:focus {
 }
 
 .toolbar-menu .menu_color {
-  left: 385px;
+  left: 355px;
 }
 
 .toolbar-menu .menu_character {
-  left: 415px;
+  left: 385px;
 }
 
 .toolbar-menu .menu_rule {
-  left: 445px;
+  left: 415px;
 }
 
 .toolbar-menu .menu_patterns {
-  left: 475px;
+  left: 465px;
 }
 
 .toolbar-menu .menu_rule a {
